--- a/src/sources/abstract/_mixins.scss
+++ b/src/sources/abstract/_mixins.scss
@@ -35,29 +35,35 @@
   place-items: center;
 }
 
+// breakpoints
 @mixin breakpoint($point) {
   @if $point == large-desktop {
     @media only screen and (min-width: 1441px) {
       @content;
     }
-  } @else if $point == desktop {
+  }
+  @if $point == desktop {
     @media only screen and (max-width: 1440px) {
       @content;
     }
-  } @else if $point == lap-top {
-    @media only screen and (min-width: 1025px) and (max-width: 1441px) {
+  } @else if $point == laptop-and-tablet {
+    @media only screen and (min-width: 768px) and (max-width: 1180px) {
       @content;
     }
   } @else if $point == tablet {
-    @media only screen and (min-width: 769px) and (max-width: 1024px) {
+    @media only screen and (min-width: 768px) and (max-width: 1024px) {
+      @content;
+    }
+  } @else if $point == phablet {
+    @media only screen and (min-width: 481px) and (max-width: 767px) {
       @content;
     }
   } @else if $point == mobile {
-    @media only screen and (min-width: 481px) and (max-width: 768px) {
+    @media only screen and (min-width: 320px) and (max-width: 480px) {
       @content;
     }
-  } @else if $point == small-mobile {
-    @media only screen and (min-width: 320px) and (max-width: 480px) {
+  } @else if $point == mobile-and-tablet {
+    @media only screen and (min-width: 320px) and (max-width: 767px) {
       @content;
     }
   }
