--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,12 @@
 @import "../src/sources/abstract/mixins";
 @import "../src/sources/utilities/container";
 @import "../src/sources/components/spinner";
+@import '../src/sources/components/horizontal-line';
+@import '../src/sources/components/redish-box';
+@import '../src/sources/components/numbers';
+@import '../src/sources/components/values';
+@import '../src/sources/components/card';
+@import '../src/sources/components/image-text';
+@import '../src/sources/components/bulletpoint';
+@import '../src/sources/components/card-number';
+@import '../src/sources/components/buttons';
