--- a/src/app/@pages/home/home.component.html
+++ b/src/app/@pages/home/home.component.html
@@ -1,8 +1,12 @@
 <div class="home">
     <div class="home__wrapper">
         <div class="home__container">
-            <hoolio-nav></hoolio-nav>
-            <hoolio-header></hoolio-header>
+            <div class="home__nav">
+                <hoolio-nav></hoolio-nav>
+            </div>
+            <div class="home__header">
+                <hoolio-header></hoolio-header>
+            </div>
         </div>
     </div>
 </div>
