--- a/src/app/@pages/home/home.component.html
+++ b/src/app/@pages/home/home.component.html
@@ -7,6 +7,15 @@
             <div class="home__header">
                 <hoolio-header></hoolio-header>
             </div>
+            <div class="horizontal-line">
+                <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
+            </div>
+            <div class="home__highlights">
+                <hoolio-highlights></hoolio-highlights>
+            </div>
+            <div class="horizontal-line">
+                <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
+            </div>
         </div>
     </div>
 </div>
