--- a/src/app/@pages/home/home.component.html
+++ b/src/app/@pages/home/home.component.html
@@ -16,6 +16,12 @@
             <div class="horizontal-line">
                 <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
             </div>
+            <div class="home__at-a-glance">
+                <hoolio-glance></hoolio-glance>
+            </div>
+            <div class="horizontal-line">
+                <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
+            </div>
         </div>
     </div>
 </div>
