--- a/src/app/@pages/home/home.component.html
+++ b/src/app/@pages/home/home.component.html
@@ -22,6 +22,12 @@
             <div class="horizontal-line">
                 <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
             </div>
+            <div class="home__history">
+                <hoolio-history></hoolio-history>
+            </div>
+            <div class="horizontal-line">
+                <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
+            </div>
         </div>
     </div>
 </div>
