--- a/src/app/@pages/home/home.component.html
+++ b/src/app/@pages/home/home.component.html
@@ -28,6 +28,12 @@
             <div class="horizontal-line">
                 <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
             </div>
+            <div class="home__history">
+                <hoolio-statement></hoolio-statement>
+            </div>
+            <div class="horizontal-line">
+                <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
+            </div>
         </div>
     </div>
 </div>
