--- a/src/sources/components/_numbers.scss
+++ b/src/sources/components/_numbers.scss
@@ -55,6 +55,7 @@
 
 .numbers__percentage {
   color: $gray;
+  margin-top: 8px;
   font-size: $font-size-xl;
   font-weight: $font-weight-light;
   display: block;
