--- a/src/app/@pages/home/home.component.html
+++ b/src/app/@pages/home/home.component.html
@@ -28,8 +28,14 @@
             <div class="horizontal-line">
                 <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
             </div>
-            <div class="home__history">
+            <div class="home__statement">
                 <hoolio-statement></hoolio-statement>
+            </div>
+            <div class="horizontal-line">
+                <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
+            </div>
+            <div class="home__business">
+                <hoolio-business></hoolio-business>
             </div>
             <div class="horizontal-line">
                 <a href="#highlights"><span class="icon-arrow-down bi bi-arrow-down"></span></a>
