--- a/src/sources/base/_reset.scss
+++ b/src/sources/base/_reset.scss
@@ -37,7 +37,7 @@ body {
   scroll-behavior: smooth;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background: black;
+  background: white;
   color: white;
   width: 100%;
   height: 100%;
