--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,4 @@
 @import '../src/sources/components/bulletpoint';
 @import '../src/sources/components/card-number';
 @import '../src/sources/components/buttons';
+@import '../src/sources/components/risks';
