--- a/src/app/@components/nav/nav.component.scss
+++ b/src/app/@components/nav/nav.component.scss
@@ -10,6 +10,11 @@
 }
 
 .nav-sticky__container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   height: 210px;
