--- a/src/app/@pages/at-a-glance/at-a-glance.component.html
+++ b/src/app/@pages/at-a-glance/at-a-glance.component.html
@@ -1,4 +1,4 @@
-<section class="glance" data-js="scroll">
+<section class="glance" data-js="scroll" [ngClass]="{'fade-in' : isProcessing}">
     <div class="glance__section container">
         <div class="glance__content-wrapper">
             <div class="glance__logo redish-box">
