--- a/src/app/@pages/business/business.component.html
+++ b/src/app/@pages/business/business.component.html
@@ -1,4 +1,4 @@
-<section class="business" data-js="scroll">
+<section class="business" data-js="scroll" [ngClass]="{'fade-in' : isProcessing}">
     <div class="business__section container" style="background-image: url(../../../assets/images/business/grandparents-sitting.png);" aria-label="Description of image" role="img"  title="Grandparents sitting on couch">
         <div class="business__contet-wrapper">
             <div class="business__logo redish-box">
