--- a/src/app/@pages/highlights/highlights.component.html
+++ b/src/app/@pages/highlights/highlights.component.html
@@ -1,4 +1,4 @@
-<section class="highlights" id="highlights" data-js="scroll">
+<section class="highlights" id="highlights" data-js="scroll" [ngClass]="{'fade-in' : isProcessing}">
     <div class="highlights__section container">
         <div class="highlights__content-wrapper">
             <div class="highlights__logo redish-box">
