--- a/src/app/@pages/history/history.component.html
+++ b/src/app/@pages/history/history.component.html
@@ -1,4 +1,4 @@
-<section class="history" data-js="scroll" style="background-image: url(../../../assets/images/history/history-background.png);">
+<section class="history" [ngClass]="{'fade-in' : isProcessing}" data-js="scroll" style="background-image: url(../../../assets/images/history/history-background.png);">
     <div class="history__section container" aria-label="Description of image" role="img" title="Living room">
         <div class="history__contet-wrapper">
             <div class="history__logo redish-box">
