--- a/src/app/@pages/statement/statement.component.html
+++ b/src/app/@pages/statement/statement.component.html
@@ -1,5 +1,5 @@
-<section class="statement" data-js="scroll">
-    <div class="statement container">
+<section class="statement" data-js="scroll" [ngClass]="{'fade-in' : isProcessing}">
+    <div class="statement__container container">
         <div class="statement__wrapper">
             <div class="statement__logo redish-box">
                 <h2 class="statement__logo-title">chairman's statement</h2>
