--- a/src/app/@pages/at-a-glance/at-a-glance.component.scss
+++ b/src/app/@pages/at-a-glance/at-a-glance.component.scss
@@ -7,12 +7,19 @@
   width: 100%;
   height: 100%;
   background-color: white;
+  opacity: 0.3;
+  transition: 0.5s all ease-in-out;
 
   .container {
     @include breakpoint(tablet) {
       padding: 0 23px;
     }
   }
+}
+
+.fade-in {
+  opacity: 1;
+  transition: 0.5s all ease-in-out;
 }
 
 .glance__cards-wrapper {
