--- a/src/app/@pages/business/business.component.scss
+++ b/src/app/@pages/business/business.component.scss
@@ -5,6 +5,13 @@
   width: 100%;
   height: 100%;
   background-color: white;
+  opacity: 0.3;
+  transition: 0.5s all ease-in-out;
+}
+
+.fade-in {
+  opacity: 1;
+  transition: 0.5s all ease-in-out;
 }
 
 .business__section {
