--- a/src/app/@pages/highlights/highlights.component.scss
+++ b/src/app/@pages/highlights/highlights.component.scss
@@ -2,6 +2,8 @@
 @import "../../../sources/abstract/variables";
 
 .highlights {
+  opacity: 0.3;
+  transition: 0.5s all ease-in-out;
   width: 100%;
   height: 100%;
   background-color: white;
@@ -10,6 +12,11 @@
       padding: 1px 7px;
     }
   }
+}
+
+.fade-in {
+  opacity: 1;
+  transition: 0.5s all ease-in-out;
 }
 
 .highlights__content-wrapper {
