--- a/src/app/@pages/home/home.component.scss
+++ b/src/app/@pages/home/home.component.scss
@@ -4,4 +4,12 @@
   background: white;
   width: 100%;
   height: 100%;
+  opacity: 0.3;
+  transition: 0.5s all ease-in-out;
+  position: relative;
+}
+
+.fade-in {
+  opacity: 1;
+  transition: 0.5s all ease-in-out;
 }
