--- a/src/app/@pages/statement/statement.component.scss
+++ b/src/app/@pages/statement/statement.component.scss
@@ -7,6 +7,13 @@
   background-color: white;
   width: 100%;
   height: 100%;
+  opacity: 0.3;
+  transition: 0.5s all ease-in-out;
+}
+
+.fade-in {
+  opacity: 1;
+  transition: 0.5s all ease-in-out;
 }
 
 .statement__desc-title-wrapper {
