--- a/src/app/@pages/at-a-glance/at-a-glance.component.scss
+++ b/src/app/@pages/at-a-glance/at-a-glance.component.scss
@@ -4,6 +4,8 @@
 @import "../../../sources/components/card";
 
 .glance {
+  @include center-grid;
+  height: 100vh;
   width: 100%;
   height: 100%;
   background-color: white;
