--- a/src/app/@pages/highlights/highlights.component.html
+++ b/src/app/@pages/highlights/highlights.component.html
@@ -1,6 +1,6 @@
 <section class="highlights" id="highlights" data-js="scroll" [ngClass]="{'fade-in' : isProcessing}">
     <div class="highlights__section container">
-        <div class="highlights__content-wrapper">
+        <div class="highlights__content-wrapper top-center">
             <div class="highlights__logo redish-box">
                 <h2 class="highlights__logo-title">highlights</h2>
             </div>
@@ -76,7 +76,7 @@
                 </ul>
             </div>
         </div>
-        <div class="highlights__content-wrapper">
+        <div class="highlights__content-wrapper bottom-center">
             <div class="redish-box redish-box--bottom">
                 <span class="redish-box__bottom-title"><a href="#"><span class="icon-download"> Download Highlights</span></a></span>
             </div>
