--- a/src/app/@pages/highlights/highlights.component.scss
+++ b/src/app/@pages/highlights/highlights.component.scss
@@ -2,6 +2,8 @@
 @import "../../../sources/abstract/variables";
 
 .highlights {
+  @include center-grid;
+  height: 100vh;
   opacity: 0.3;
   transition: 0.5s all ease-in-out;
   width: 100%;
@@ -24,6 +26,22 @@
 
   position: relative;
   z-index: 1;
+}
+
+.bottom-center {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+}
+
+.top-center {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
 }
 
 .highlights__number-wrapper {
