--- a/src/app/@pages/strategy/strategy.component.html
+++ b/src/app/@pages/strategy/strategy.component.html
@@ -263,7 +263,7 @@
                 </div>
             </div>
         </div>
-        <div class="strategy__bottom-wrapper">
+        <div class="strategy__bottom-wrapper bottom-center">
             <div class="redish-box redish-box--bottom">
                 <span class="redish-box__bottom-title"><a href="#"><span class="icon-download"></span> Download Our Strategy</a></span>
             </div>
