--- a/src/app/@components/side-nav/side-nav.component.scss
+++ b/src/app/@components/side-nav/side-nav.component.scss
@@ -26,6 +26,7 @@
   text-align: right;
   font-size: $font-size-s;
   padding: 9px 15px 9px 40px;
+  cursor: pointer;
 
   @include breakpoint(mobile-and-tablet) {
     padding: 0 5px 15px 0;
