--- a/src/app/@pages/history/history.component.scss
+++ b/src/app/@pages/history/history.component.scss
@@ -13,9 +13,14 @@
   opacity: 0.3;
   transition: 0.5s all ease-in-out;
   position: relative;
+  height: 100vh;
 
   @include breakpoint(laptop-and-tablet) {
     height: 2000px;
+  }
+
+  @include breakpoint(mobile-and-tablet) {
+    height: 2500px;
   }
 }
 
