--- a/src/app/@pages/strategy/strategy.component.scss
+++ b/src/app/@pages/strategy/strategy.component.scss
@@ -5,15 +5,60 @@
 @import "../../../sources/components/redish-box";
 @import "../../../sources/components/risks";
 
+.open-txt {
+  display: none;
+  float: right;
+  height: 10px;
+  width: 10px;
+  font-size: 46px;
+  text-align: $center;
+  color: $redish-color;
+  margin-right: 10px;
+  margin-bottom: 30px;
+  transition: 0.3s all;
+
+  @include breakpoint (mobile-and-tablet) {
+    display: inline;
+  }
+}
+
+.close {
+  transform: rotate(45deg);
+  transition: 0.3s all;
+  transform-origin: 12px 25px;
+}
+
 .strategy__section {
+  @include breakpoint(mobile-and-tablet) {
+    min-height: 1500px;
+  }
   @include breakpoint(large-desktop) {
     padding: 0 13px;
   }
 }
 
+@include breakpoint(mobile-and-tablet) {
+  .bottom-center {
+    position: absolute !important;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+  }
+}
+
+.hidden {
+  display: none;
+}
+
 .strategy {
   opacity: 0.3;
   transition: 0.5s all ease-in-out;
+  position: relative;
+  
+  @include breakpoint(mobile-and-tablet) {
+    min-height: 1500px;
+  }
 }
 
 .fade-in {
