--- a/src/app/@pages/statement/statement.component.html
+++ b/src/app/@pages/statement/statement.component.html
@@ -11,7 +11,7 @@
         <div class="statement__profile-wrapper">
             <div class="statement__profile">
                 <div class="statement__img-wrapper">
-                    <img class="statement__img" src="../../../assets/images/chairmans-statment/chairmans-statment-profile-image.png" alt="Chariman's Statement Profile Picture">
+                    <img class="statement__img" src="assets/chairmans-statment/chairmans-statment-profile-image.png" alt="Chariman's Statement Profile Picture">
                 </div>
                 <div class="numbers">
                     <div class="statement__content-wrapper">
@@ -31,28 +31,28 @@
                     <h3 class="values__main-title">Our Values</h3>
                     <ul class="values__list">
                         <li class="values__item">
-                            <img class="values__image" src="../../../assets/images/chairmans-statment/harth.png" alt="Heart icon">
+                            <img class="values__image" src="assets/chairmans-statment/harth.png" alt="Heart icon">
                             <div class="values__text-box">
                                 <span class="values__title">Deliver an exceptional customer experience</span>
                                 <p class="values__description">We place emphasis on providing high levels of service throughout our customers journey from point of sale, though to delivery, and after sales service.</p>
                             </div>
                         </li>
                         <li class="values__item">
-                            <img class="values__image" src="../../../assets/images/chairmans-statment/star.png" alt="Star icon">
+                            <img class="values__image" src="assets/chairmans-statment/star.png" alt="Star icon">
                             <div class="values__text-box">
                                 <span class="values__title">Extensive product range</span>
                                 <p class="values__description">We aim to offer our customers the best choice and value in the market-place, through our range of famous brands and own label products.</p>
                             </div>
                         </li>
                         <li class="values__item">
-                            <img class="values__image" src="../../../assets/images/chairmans-statment/weird-cube.png" alt="Cube icon">
+                            <img class="values__image" src="assets/chairmans-statment/weird-cube.png" alt="Cube icon">
                             <div class="values__text-box">
                                 <span class="values__title">Knowledgeable team</span>
                                 <p class="values__description">We train our staff to talk accurately about our products so our customers can be confident they are making the right choice for their home.</p>
                             </div>
                         </li>
                         <li class="values__item">
-                            <img class="values__image" src="../../../assets/images/chairmans-statment/eye.png" alt="Eye icon">
+                            <img class="values__image" src="assets/chairmans-statment/eye.png" alt="Eye icon">
                             <div class="values__text-box">
                                 <span class="values__title">Growth focused</span>
                                 <p class="values__description">Across the business we focus on growing sales and profits, by growing sales densities, diversifying the range and the development of our branded offering.</p>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="statement__signature">
-                    <img src="../../../assets/images/chairmans-statment/signature.png" alt="Signature">
+                    <img src="assets/chairmans-statment/signature.png" alt="Signature">
                 </div>
                 <div class="statement__footer">
                     <span class="statement__footer-initials">Alan Smith</span>
