* Fixing deployment of project

--- a/src/app/@components/footer/footer.component.html
+++ b/src/app/@components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="footer__section container">
         <div class="footer__logo-wrapper">
-            <img class="footer__logo-img" src="assets/header-logo.png" alt="Header logo">
+            <img class="footer__logo-img" src="assets/images/header-logo.png" alt="Header logo">
         </div>
         <div class="footer__terms-wrapper">
             <span class="footer__terms">Terms & conditions</span>
