--- a/src/app/@components/nav/nav.component.html
+++ b/src/app/@components/nav/nav.component.html
@@ -4,7 +4,7 @@
             <span class="nav-sticky__title">Annual Report 2016</span>
         </div>
         <div class="nav-sticky__center-side">
-            <img class="nav-sticky__image" src="assets/header-logo.png" alt="Logo of company">
+            <img class="nav-sticky__image" src="assets/images/header-logo.png" alt="Logo of company">
         </div>
         <div class="nav-sticky__right-side">
             <span class="nav-sticky__link"><a href="#"><span class="icon-download">Download centre</span></a></span>
