--- a/src/app/@pages/download/download.component.html
+++ b/src/app/@pages/download/download.component.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="download__img-wrapper">
-            <img class="download__img-catalog" src="assets/download/catalog.png" alt="Catalog image">
+            <img class="download__img-catalog" src="assets/images/download/catalog.png" alt="Catalog image">
             <span class="download__img-title"><a href="#"><span class="icon-download"></span>Download full Annual Reports and Accounts 2016 (PDF, 2.5MB)</a></span>
         </div>
         <div class="download__row-wrapper">
