--- a/src/app/@pages/history/history.component.html
+++ b/src/app/@pages/history/history.component.html
@@ -1,4 +1,4 @@
-<section class="history" [ngClass]="{'fade-in' : isProcessing}" data-js="scroll" style="background-image: url(assets/history/history-background.png);">
+<section class="history" [ngClass]="{'fade-in' : isProcessing}" data-js="scroll" style="background-image: url(assets/images/history/history-background.png);">
     <div class="history__section container" aria-label="Description of image" role="img" title="Living room">
         <div class="history__contet-wrapper">
             <div class="history__logo redish-box">
@@ -26,7 +26,7 @@
                     </div>
                     <div class="card-number__logo card-number__logo--bl">
                         <span class="card-number__line card-number__line--tr"></span>
-                        <img class="card-number__img" src="assets/history/computer.png" alt="Computer Icon">
+                        <img class="card-number__img" src="assets/images/history/computer.png" alt="Computer Icon">
                     </div>
                 </div>
                 <div class="card-number__second">
@@ -40,7 +40,7 @@
                     </div>
                     <div class="card-number__logo card-number__logo--tc">
                         <span class="card-number__line card-number__line--bl"></span>
-                        <img class="card-number__img" src="assets/history/lamp.png" alt="Lamp Icon">
+                        <img class="card-number__img" src="assets/images/history/lamp.png" alt="Lamp Icon">
                     </div>
                 </div>
                 <div class="card-number__third">
@@ -52,7 +52,7 @@
                     </div>
                     <div class="card-number__logo card-number__logo--bc">
                         <span class="card-number__line card-number__line--tr"></span>
-                        <img class="card-number__img" src="assets/history/percentage.png" alt="Percentage Icon">
+                        <img class="card-number__img" src="assets/images/history/percentage.png" alt="Percentage Icon">
                     </div>
                 </div>
                 <div class="card-number__fourth">
@@ -65,7 +65,7 @@
                     </div>
                     <div class="card-number__logo card-number__logo--tc">
                         <span class="card-number__line card-number__line--bl"></span>
-                        <img class="card-number__img" src="assets/history/cube.png" alt="Cube Icon">
+                        <img class="card-number__img" src="assets/images/history/cube.png" alt="Cube Icon">
                     </div>
                 </div>
                 <div class="card-number__fifth">
@@ -78,7 +78,7 @@
                     </div>
                     <div class="card-number__logo card-number__logo--bc">
                         <span class="card-number__line card-number__line--tr"></span>
-                        <img class="card-number__img" src="assets/history/shop.png" alt="Shop Icon">
+                        <img class="card-number__img" src="assets/images/history/shop.png" alt="Shop Icon">
                     </div>
                 </div>
                 <div class="card-number__sixth">
@@ -92,7 +92,7 @@
                     </div>
                     <div class="card-number__logo card-number__logo--tc">
                         <span class="card-number__line card-number__line--bl"></span>
-                        <img class="card-number__img" src="assets/history/computer.png" alt="Computer Icon">
+                        <img class="card-number__img" src="assets/images/history/computer.png" alt="Computer Icon">
                     </div>
                 </div>
                 <div class="card-number__seventh">
@@ -105,7 +105,7 @@
                     </div>
                     <div class="card-number__logo card-number__logo--bc">
                         <span class="card-number__line card-number__line--tr"></span>
-                        <img class="card-number__img" src="assets/history/stonks.png" alt="Stonks Icon">
+                        <img class="card-number__img" src="assets/images/history/stonks.png" alt="Stonks Icon">
                     </div>
                 </div>
                 <div class="card-number__eighth">
@@ -118,7 +118,7 @@
                     </div>
                     <div class="card-number__logo card-number__logo--tr">
                         <span class="card-number__line card-number__line--bl"></span>
-                        <img class="card-number__img" src="assets/history/sofa.png" alt="Sofa Icon">
+                        <img class="card-number__img" src="assets/images/history/sofa.png" alt="Sofa Icon">
                     </div>
                 </div> 
                 <span class="big-line"></span>
