--- a/src/app/@pages/strategy/strategy.component.html
+++ b/src/app/@pages/strategy/strategy.component.html
@@ -20,7 +20,7 @@
                         <h3 class="image-text__title">Strategic priority</h3>
                     </div>
                     <div class="image-text__wrapper">
-                        <img class="image-text__img" src="assets/strategy/sofa.png" alt="Image of sofa">
+                        <img class="image-text__img" src="assets/images/strategy/sofa.png" alt="Image of sofa">
                         <div class="image-text__text-wrapper">
                             <button type="button" class="open-txt" data-js="open"></button>
                             <h4 class="image-text__heading">Increasing sales densities – by broadening the brand and product offer and raising brand awareness.</h4>
@@ -60,7 +60,7 @@
             <div class="strategy__row-wrapper">
                 <div class="image-text">
                     <div class="image-text__wrapper">
-                        <img class="image-text__img" src="assets/strategy/concessions.png" alt="Image of sofa">
+                        <img class="image-text__img" src="assets/images/strategy/concessions.png" alt="Image of sofa">
                         <div class="image-text__text-wrapper">
                             <button type="button" class="open-txt" data-js="open"></button>
                             <h4 class="image-text__heading">Develop new Concessions.</h4>
@@ -94,7 +94,7 @@
             <div class="strategy__row-wrapper">
                 <div class="image-text">
                     <div class="image-text__wrapper">
-                        <img class="image-text__img" src="assets/strategy/shop.png" alt="Image of shop">
+                        <img class="image-text__img" src="assets/images/strategy/shop.png" alt="Image of shop">
                         <div class="image-text__text-wrapper">
                             <button type="button" class="open-txt" data-js="open"></button>
                             <h4 class="image-text__heading">Filling in the white space – opening new stores. </h4>
@@ -128,7 +128,7 @@
             <div class="strategy__row-wrapper">
                 <div class="image-text">
                     <div class="image-text__wrapper">
-                        <img class="image-text__img" src="assets/strategy/tablet.png" alt="Image of tablet">
+                        <img class="image-text__img" src="assets/images/strategy/tablet.png" alt="Image of tablet">
                         <div class="image-text__text-wrapper">
                             <button type="button" class="open-txt" data-js="open"></button>
                             <h4 class="image-text__heading">The online trading pportunity.</h4>
