--- a/src/app/@pages/download/download.component.scss
+++ b/src/app/@pages/download/download.component.scss
@@ -99,6 +99,7 @@
   margin: 11px 0 26px 0;
   display: flex;
   justify-content: space-between;
+  padding: 30px 0;
 
   @include breakpoint(mobile-and-tablet) {
     display: block;
