--- a/src/app/@pages/highlights/highlights.component.scss
+++ b/src/app/@pages/highlights/highlights.component.scss
@@ -16,6 +16,18 @@
   }
 }
 
+.highlights__section {
+  position: relative;
+  height: 100%;
+  display: grid;
+  place-items: left;
+  text-align: left;
+
+  @media (min-width: 320px) and (max-width: 1040px) {
+    padding: 100px 20px;
+  }
+}
+
 .fade-in {
   opacity: 1;
   transition: 0.5s all ease-in-out;
