--- a/src/app/@pages/history/history.component.scss
+++ b/src/app/@pages/history/history.component.scss
@@ -19,8 +19,12 @@
     height: 2000px;
   }
 
-  @include breakpoint(mobile-and-tablet) {
-    height: 2500px;
+  @media (min-width: 500px) and (max-width: 768px) {
+    height: 2700px;
+  }
+
+  @media (min-width: 320px) and (max-width: 500px) {
+    height: 2900px;
   }
 }
 
